# life-log

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  REVIEW.md  check  docker-compose.yml  manage.py  pyproject.toml
app/: auth.py  config.py  main.py  models.py  schemas.py
app/routers/: entries.py  keys.py  owntracks.py  waistline.py
app/services/: weather.py
tests/: conftest.py  test_auth.py  test_entries.py  test_keys.py  test_owntracks.py  test_waistline.py  test_weather_service.py
